# foonix

./: .Makefile.swp  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.bak  README.md  TC-foonix.cmake  TC-gnu.cmake  bochsrc  build.sh  config.sh  filter.sh  initenv.sh  prereqs.sh
cmake/: _tools.cmake  config.cmake  klink.cmake  target.cmake
cmake/arch/: i386.cmake  x86_64.cmake
config/: i686.json  lint.json  x86_64.json
grub/: CMakeLists.txt  grub.cfg
kernel/: Makefile
kernel/arch/i386/: archinit.c  cpu.S  isr.S  linker.ld  loader.S  make.config  paging.c  realprot.S
kernel/arch/i386/dev/: timer.cpp  tty.cpp
kernel/arch/i386/i386/: boot.S  bus.cpp  cpu.S  gdt.cpp  idt.cpp  isr.S  paging.cpp  stage1.cpp  vectors.js  vectors.s
kernel/arch/i386/include/: atomic.h  bus.h  cpu.h  cpudefs.h  idt.h  memory.h  vga.h
kernel/attic/kernel/: Makefile  ata.c  desctab.c  loader.S
kernel/attic/string/: Makefile  strbswp.c  string.ro  strkcpy.c  strtrim.c
kernel/attic/tests/: Makefile  cbin.mk  memtest.c  test.sh
kernel/include/: asm.h  ata.h  cdefs.h  cpu.h  cpudefs.h  driver.h  multboot.h  stdint.h  string.h
kernel/include/kernel/: flow.h  tty.h
kernel/kern/: Makefile  ata.c  cpu.S  desctab.c  display.c  foo.c  hexdump.c  inter.c  isr.S  keyboard.c  kheap.c  klist.c  kprintf.c  linker.ld  loader.S  machine.c  main.c  process.c
kernel/kernel/: main.cpp
kernel/string/: Makefile  memchr.S  memcpy.S  memset.S  memsetw.S  strkcat.c  strnlen.c
kernel/tests/: Makefile  memtest  memtest.c  string.cro  string.cro.syms
lib/: CMakeLists.txt
lib/libc/: CMakeLists.txt  Makefile  README.md
lib/libc++/: Makefile  README.md  cppfill.cpp
lib/libc/arch/i386/: make.config
lib/libc/include/: stdlib.h
lib/libc/include/sys/: assert.h
lib/libc/stdio/: vprintf.c  vsnprintf.c
lib/libc/stdlib/: malloc.c
lib/libc/string/: strlen.c  strncat.c
libc/: Makefile
libc++/: Makefile  cppfill.cpp
libc++/arch/i386/: make.config
libc++/include/: utility
libc/arch/i386/: make.config
libc/arch/i386/string/: memset.S
libc/include/: stdio.h  stdlib.h  string.h
libc/include/sys/: assert.h  cdefs.h
libc/stdio/: printf.c  putchar.c  puts.c  snprintf.c  vprintf.c  vsnprintf.c
libc/stdlib/: abort.c  free.c  malloc.c
libc/string/: _s_strncat.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c  strncat.c  strncpy.c  strnlen.c
scripts/: prereqs.sh  superclean.sh  sysroot_init.sh
sys/: CMakeLists.txt  Makefile
sys/attic/include/: driver.h  kernio.h  kheap.h  klist.h  ktime.h  paging.h  process.h  scan.h  stdlib.h
sys/attic/kernel/: display.c  hexdump.c  inter.c  klist.c  kprint_bitinfo.c  linker.ld  paging.c  process.c  realprot.S  timer.c
sys/include/: concepts  expected  stdint.h  stdio.h  string.h  type_traits  utility
sys/include/cppimpl/expected/: expected.h  unexpected.h
sys/include/cppimpl/type_traits/: integral.h  pointer.h
sys/include/kernel/: allocator.h  arch.h  bitmap.h  debug.h  flow.h  kernel.h  kernel_args.h  proc.h  tty.h  types.h  utilities.h  vm.h
sys/include/kernel/arch/: arch.h  dconsole.h  paging.h
sys/include/kernel/utils/: align.h
sys/include/kernel/vm/: paging.h  vm.h
sys/include/sys/: assert.h  cdefs.h
sys/kernel/: CMakeLists.txt  kernel  kernel_args.cpp  main.cpp
sys/kernel/arch/i386/: build.cmake  linker.ld  make.config
sys/kernel/arch/i386/dev/: timer.cpp  tty.cpp
sys/kernel/arch/i386/i386/: arch.cpp  arch_vm.cpp  boot.S  bus.cpp  cpu.S  dconsole.cpp  gdt.cpp  idt.cpp  isr.S  memsetw.S  multiboot.cpp  paging.cpp  preinit.cpp  stage1.cpp  start.S  vectors.js
sys/kernel/arch/i386/include/: arch_vm.h  atomic.h  bus.h  cpu.h  cpudefs.h  cpuflags.h  defs.h  idt.h  memory.h  multiboot.h  page.h  vga.h
sys/kernel/arch/x86/: build.cmake
sys/kernel/arch/x86/dev/: tty.cpp
sys/kernel/arch/x86/include/: asm.h  vga.h
sys/kernel/arch/x86_64/: build.cmake  linker.ld
sys/kernel/arch/x86_64/include/: cpu.h
sys/kernel/arch/x86_64/src/: arch_vm.cpp  boot.S
sys/kernel/src/: allocator.cpp  debug.cpp  kernel_args.cpp  main.cpp
sys/kernel/src/vm/: vm.cpp  vm_page.cpp
sys/kernel/vm/: vm.cpp  vm_page.cpp
sys/libk/: CMakeLists.txt  cppfill.cpp
sys/libk/arch/i386/: asm.h  build.cmake
sys/libk/arch/i386/rt/: crti.S  crtn.S
sys/libk/arch/i386/string/: memchr.S  memcpy.S  memset.S
sys/libk/rt/: cppfill.cpp  runtime.c
sys/libk/stdio/: printf.c  putchar.c  puts.c  vsnprintf.c
sys/libk/stdlib/: abort.c  free.c
sys/libk/string/: _s_strncat.c  _s_strncpy.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c  strncpy.c  strnlen.c
tars/: Makefile  tool.mk
tars/binutils/: Makefile
work/: AVLTree.h  CppTest.cpp  PageFrameAllocator.cpp  PageFrameAllocator.h  README.md  SlabAllocator.h  common.h
